--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <inceptionYear>2013</inceptionYear>
   <organization>
-    <name>SonarSource and Jerome Van Der Linden, Stephane Nicolas, Florian Roncari, Thomas Bores</name>
+    <name>SonarSource and Jerome Van Der Linden, Stephane Nicolas, Florian Roncari, Thomas Bores, Jordan Hansen</name>
     <url>http://www.sonarsource.com</url>
   </organization>
   <licenses>
@@ -53,13 +53,13 @@
   </ciManagement>
 
   <properties>
-    <sonar.version>4.2</sonar.version>
-    <sonar-java.version>2.1</sonar-java.version>
+    <sonar.version>4.5.2</sonar.version>
+    <sonar-java.version>3.0</sonar-java.version>
     <!-- Configuration for sonar-packaging-maven-plugin -->
     <sonar.pluginClass>org.sonar.plugins.android.AndroidPlugin</sonar.pluginClass>
     <sonar.pluginName>Android</sonar.pluginName>
     <sonar.requirePlugins>java:${sonar-java.version}</sonar.requirePlugins>
-    <lint.version>22.2.0</lint.version>
+    <lint.version>24.1.3</lint.version>
     <simplexml.version>2.7.1</simplexml.version>
     <jsr305.version>3.0.0</jsr305.version>
     <slf4j.version>1.7.10</slf4j.version>
@@ -105,6 +105,10 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>13.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.simpleframework</groupId>
+      <artifactId>simple-xml</artifactId>
     </dependency>
 
 
